workspace(name = "cargo_raze")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_rust",
    sha256 = "accb5a89cbe63d55dcdae85938e56ff3aa56f21eb847ed826a28a83db8500ae6",
    strip_prefix = "rules_rust-9aa49569b2b0dacecc51c05cee52708b7255bd98",
    urls = [
        # Main branch as of 2021-02-19
        "https://github.com/bazelbuild/rules_rust/archive/9aa49569b2b0dacecc51c05cee52708b7255bd98.tar.gz",
    ],
)

load("@rules_rust//rust:repositories.bzl", "rust_repositories")

rust_repositories(
    edition = "2018",
    version = "1.49.0",
)

load("//third_party:third_party_repositories.bzl", "third_party_repositories")

third_party_repositories()

load("//third_party:third_party_transitive_deps.bzl", "third_party_transitive_deps")

third_party_transitive_deps()

load("//tools:examples_repository.bzl", "examples_repository")

examples_repository()

load("@cargo_raze_examples//:repositories.bzl", examples_repositories = "repositories")

examples_repositories()
