workspace(name = "cargo_raze")

load("//:repositories.bzl", "cargo_raze_repositories")

cargo_raze_repositories()

load("//:transitive_deps.bzl", "cargo_raze_transitive_deps")

cargo_raze_transitive_deps()

load("//tools:examples_repository.bzl", "examples_repository")

examples_repository()

load("@cargo_raze_examples//:repositories.bzl", examples_repositories = "repositories")

examples_repositories()

load("@rules_rust//tools/rust_analyzer:deps.bzl", "rust_analyzer_deps")

rust_analyzer_deps()
