[package]
name = "cargo-raze"
version = "0.6.0"
authors = ["Alex McArther <acmcarther@google.com>"]
readme = "README.md"
keywords = ["subcommand"]
license = "Apache-2.0"
repository = "https://github.com/google/cargo-raze"
edition = "2018"
description = """
A Cargo subcommand to generate Bazel BUILD files
"""

[badges]
travis-ci = { repository = "google/cargo-raze", branch = "master" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-raze"
path = "src/bin/cargo-raze.rs"

[dependencies]
anyhow = "1.0.33"
cargo_metadata = "0.11.3"
cargo_toml = "0.8.1"
cargo-clone-crate = "0.1.3"
cargo-lock = "5.0.0"
cargo-platform = "0.1.1"
cfg-expr = "0.4.1"
crates-index = "0.15.4"
docopt = "1.1.0"
itertools = "0.9.0"
log = "0.4.11"
rustc-serialize = "0.3.24"
semver = "0.10.0"
serde = "1.0.116"
serde_derive = "1.0.116"
slug = "0.1.4"
spdx = "0.3.4"
tempfile = "3.1.0"
tera = "1.5.0"
toml = "0.5.6"
url = "2.1.1"

[dev-dependencies]
flate2 = "1.0.18"
hamcrest2 = "0.3.0"
httpmock = "0.5.0"
lazy_static = "1.4.0"
serde_json = "1.0.58"
tar = "0.4.30"
