[package]
name = "cargo-raze"
version = "0.7.0"
authors = ["Alex McArther <acmcarther@google.com>"]
readme = "README.md"
keywords = ["subcommand"]
license = "Apache-2.0"
repository = "https://github.com/google/cargo-raze"
edition = "2018"
description = """
A Cargo subcommand to generate Bazel BUILD files
"""

[badges]
travis-ci = { repository = "google/cargo-raze", branch = "master" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-raze"
path = "src/bin/cargo-raze.rs"

[dependencies]
anyhow = "1.0.35"
cargo_metadata = "0.12.1"
cargo_toml = "0.8.1"
cargo-clone-crate = { version = "0.1.5", default-features = false }
cargo-lock = "6.0.0"
cargo-platform = "0.1.1"
cfg-expr = "0.5.0"
crates-index = "0.16.2"
docopt = "1.1.0"
glob = "0.3.0"
itertools = "0.9.0"
log = "0.4.11"
pathdiff = "0.2.0"
regex = "1.4.2"
rustc-serialize = "0.3.24"
semver = { version = "0.11.0", features = ["serde"] }
serde = "1.0.118"
serde_derive = "1.0.118"
slug = "0.1.4"
spdx = "0.3.4"
tempfile = "3.1.0"
tera = "1.5.0"
toml = "0.5.7"
url = "2.2.0"

[dev-dependencies]
flate2 = "1.0.19"
hamcrest2 = "0.3.0"
httpmock = "0.5.2"
indoc = "1.0.3"
lazy_static = "1.4.0"
serde_json = "1.0.60"
tar = "0.4.30"
