[package]
name = "cargo-raze"
version = "0.14.2"
authors = ["Alex McArther <acmcarther@google.com>"]
readme = "README.md"
keywords = ["subcommand"]
license = "Apache-2.0"
repository = "https://github.com/google/cargo-raze"
edition = "2018"
description = """
A Cargo subcommand to generate Bazel BUILD files
"""

[badges]
travis-ci = { repository = "google/cargo-raze", branch = "master" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "cargo-raze"
path = "src/bin/cargo-raze.rs"

[dependencies]
anyhow = "1.0.38"
cargo_metadata = "0.14"
cargo_toml = "0.8.1"
cargo-clone-crate = { version = "0.1.6", default-features = false }
cargo-lock = "7"
cargo-platform = "0.1.1"
cfg-expr = "0.6.0"
crates-index = "0.17"
docopt = "1.1.0"
glob = "0.3.0"
itertools = "0.10.0"
log = "0.4.13"
pathdiff = "0.2.0"
regex = "1.4.3"
rustc-serialize = "0.3.24"
semver = { version = "1", features = ["serde"] }
serde = "1.0.120"
serde_derive = "1.0.120"
serde_json = "1.0.61"
slug = "0.1.4"
spdx = "0.3.4"
tempfile = "3.2.0"
tera = "1.6.1"
toml = "0.5.8"
url = { version = "2.2.0", features = ["serde"] }

[dev-dependencies]
flate2 = "1.0.19"
hamcrest2 = "0.3.0"
httpmock = "0.5.4"
indoc = "1.0.3"
lazy_static = "1.4.0"
tar = "0.4.30"

[package.metadata.raze]
workspace_path = "//third_party/cargo"
gen_workspace_prefix = "cargo_raze"
genmode = "Remote"
default_gen_buildrs = true
experimental_api = true
render_package_aliases = false
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "i686-apple-darwin",
    "i686-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

[package.metadata.raze.crates.crossbeam-utils.'*']
gen_buildrs = false
additional_flags = [
    "--cfg=has_atomic_u8",
    "--cfg=has_atomic_u16",
    "--cfg=has_atomic_u32",
    "--cfg=has_atomic_u64",
]

[package.metadata.raze.crates.curl-sys.'*']
# build.rs file: https://github.com/alexcrichton/curl-rust/blob/master/curl-sys/build.rs
gen_buildrs = false
additional_deps = ["@cargo_raze__curl//:curl"]

[package.metadata.raze.crates.deunicode.'*']
# This string is buildifier compliant
data_attr = """\
glob(
        ["**"],
        exclude = ["**/*.rs"],
    )"""

[package.metadata.raze.crates.libgit2-sys.'*']
# build.rs file: https://github.com/rust-lang/git2-rs/blob/master/libgit2-sys/build.rs
gen_buildrs = false
additional_deps = ["@cargo_raze__libgit2//:libgit2"]

[package.metadata.raze.crates.libssh2-sys.'*']
# build.rs file: https://github.com/alexcrichton/ssh2-rs/blob/master/libssh2-sys/build.rs
build_data_dependencies = [
    "@cargo_raze__libssh2//:libssh2",
    "@cargo_raze__openssl//:openssl",
]
additional_deps = ["@cargo_raze__libssh2//:libssh2"]

[package.metadata.raze.crates.libz-sys.'*']
# build.rs file: https://github.com/rust-lang/libz-sys/blob/main/build.rs
gen_buildrs = false
additional_flags = ["--cfg=static"]

[package.metadata.raze.crates.openssl.'*']
additional_deps = ["@cargo_raze__openssl//:openssl"]

[package.metadata.raze.crates.openssl-sys.'*']
# build.rs file: https://github.com/sfackler/rust-openssl/blob/master/openssl-sys/build/main.rs
build_data_dependencies = [
    "@cargo_raze__openssl//:openssl",
    "@cargo_raze__openssl//:gen_dir",
]
data_attr = "[\"@cargo_raze__openssl//:openssl\"]"
additional_deps = ["@cargo_raze__openssl//:openssl"]
    [package.metadata.raze.crates.openssl-sys.'*'.buildrs_additional_environment_variables]
        OPENSSL_DIR="$(execpath @cargo_raze__openssl//:gen_dir)"
        OPENSSL_STATIC="1"

[package.metadata.raze.crates.semver-parser.'*']
data_attr = "glob([\"**/*.pest\"])"

[package.metadata.raze.crates.tera.'*']
data_attr = "glob([\"**/*.pest\"])"

[package.metadata.raze.crates.unic-ucd-version.'*']
data_attr = "glob([\"**/*.rsv\"])"

[package.metadata.raze.crates.unic-ucd-segment.'*']
data_attr = "glob([\"**/*.rsv\"])"
