package(default_visibility = ["//:__subpackages__"])

exports_files([
    "examples_repository_tools.sh",
    "examples_repository_tools.bat",
])

sh_binary(
    name = "bootstrap",
    srcs = ["bootstrap.sh"],
)

sh_binary(
    name = "publish_new_version",
    srcs = ["publish-new-version.sh"],
)

sh_binary(
    name = "examples_vendor",
    srcs = ["examples_repository_tools.sh"],
    args = ["vendor"],
)

sh_binary(
    name = "examples_raze",
    srcs = ["examples_repository_tools.sh"],
    args = [
        "raze",
        "$(location //impl:cargo_raze_bin)",
    ],
    data = ["//impl:cargo_raze_bin"],
)

sh_binary(
    name = "examples_check",
    srcs = ["examples_repository_tools.sh"],
    args = [
        "check",
        "$(location //impl:cargo_raze_bin)",
    ],
    data = ["//impl:cargo_raze_bin"],
)

alias(
    name = "cargo",
    actual = select({
        "@rules_rust//rust/platform:aarch64-apple-darwin": "@rust_darwin_aarch64_tools//:cargo",
        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": "@rust_linux_aarch64_tools//:cargo",
        "@rules_rust//rust/platform:x86_64-apple-darwin": "@rust_darwin_x86_64_tools//:cargo",
        "@rules_rust//rust/platform:x86_64-pc-windows-msvc": "@rust_windows_x86_64_tools//:cargo",
        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": "@rust_linux_x86_64_tools//:cargo",
    }),
)

alias(
    name = "rustc",
    actual = select({
        "@rules_rust//rust/platform:aarch64-apple-darwin": "@rust_darwin_aarch64_tools//:rustc",
        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": "@rust_linux_aarch64_tools//:rustc",
        "@rules_rust//rust/platform:x86_64-apple-darwin": "@rust_darwin_x86_64_tools//:rustc",
        "@rules_rust//rust/platform:x86_64-pc-windows-msvc": "@rust_windows_x86_64_tools//:rustc",
        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": "@rust_linux_x86_64_tools//:rustc",
    }),
)

sh_binary(
    name = "raze",
    srcs = ["wrapper.sh"],
    data = [
        ":cargo",
        ":rustc",
        "//impl:cargo_raze_bin",
    ],
    env = {
        "CARGO": "$(execpath :cargo)",
        "CARGO_RAZE": "$(execpath //impl:cargo_raze_bin)",
        "RUSTC": "$(execpath :rustc)",
    },
)
