"""All executable targets within this workspace should have a launch_test
within this file to ensure the targets not only build successfully but run
successfully as well
"""

load("//tests:launch_test.bzl", "launch_test")

test_suite(
    name = "examples_tests",
    tests = [
        launch_test(target = "@cargo_raze_examples//remote/binary_dependencies:binary_dependencies_bin"),
        launch_test(target = "@cargo_raze_examples//remote/cargo_workspace/num_printer:number_printer"),
        launch_test(target = "@cargo_raze_examples//remote/parent_directory_workspace/main/remote_num_printer:remote_number_printer"),
        launch_test(target = "@cargo_raze_examples//remote/complicated_cargo_library"),
        launch_test(target = "@cargo_raze_examples//remote/no_deps"),
        launch_test(target = "@cargo_raze_examples//remote/non_cratesio:non_cratesio_remote"),
        launch_test(target = "@cargo_raze_examples//vendored/cargo_workspace/num_printer:number_printer"),
        launch_test(target = "@cargo_raze_examples//vendored/complicated_cargo_library"),
        launch_test(target = "@cargo_raze_examples//vendored/hello_cargo_library"),
        launch_test(target = "@cargo_raze_examples//vendored/non_cratesio_library"),
        "@cargo_raze_examples//remote/build_dependencies:build_dependencies_test",
        "@cargo_raze_examples//remote/dev_dependencies:dev_dependencies_test",
    ],
    visibility = ["//visibility:public"],
)
