load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//remote/binary_dependencies/cargo:crates.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "binary_dependencies_bin",
    srcs = ["src/main.rs"],
    data = [
        "//remote/binary_dependencies/cargo:cargo_bin_texture_synthesis",
    ],
    deps = all_crate_deps(),
)
