[package]
name = "no_deps"
version = "0.1.0"
authors = ["UebelAndre <github@uebelandre.com>"]

[[bin]]
name = "no_deps"
path = "src/main.rs"

[package.metadata.raze]
workspace_path = "//remote/no_deps/cargo"
genmode = "Remote"
gen_workspace_prefix = "remote_no_deps"
package_aliases_dir = "cargo"
default_gen_buildrs = true
