[package]
name = "add-one"
version = "0.1.0"
authors = ["Sam Schlegel <git@lutin.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
# TODO: Handle this version conflict
# rand = "0.5"
rand = "0.6"
