[package]
name = "adder"
version = "0.1.0"
authors = ["Sam Schlegel <git@lutin.us>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "adder"
path = "src/main.rs"

[dependencies]
rand = "0.7"
add-one = { path = "../add-one" }
