load("@rules_rust//rust:defs.bzl", "rust_binary")
load("//remote/cargo_workspace/cargo:crates.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "number_printer",
    srcs = ["src/main.rs"],
    edition = "2018",
    deps = [
        "//remote/cargo_workspace/printer",
    ] + all_crate_deps(),
)
