load("@rules_rust//rust:defs.bzl", "rust_library")
load("//remote/parent_directory_workspace/cargo:crates.bzl", "all_crate_deps")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "printer",
    srcs = ["src/lib.rs"],
    edition = "2018",
    deps = all_crate_deps(),
)
